--- a/profiles/deployment.properties
+++ b/profiles/deployment.properties
@@ -21,7 +21,7 @@ db.cmtaxprojects.maxPoolSize=4
 db.cmtaxprojects.minPoolSize=2
 db.cmtaxprojects.password=7b6a43524a063d146a7e6b2d4e3f78700d662158
 db.cmtaxprojects.transactionTimeout=30
-db.cmtaxprojects.url=jdbc:mysql://vancodbinstance.ccwib6wtwnf7.us-west-2.rds.amazonaws.com:55501/cmtaxprojects?useUnicode=yes&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+db.cmtaxprojects.url=jdbc:mysql://prodtaxprojects.ccwib6wtwnf7.us-west-2.rds.amazonaws.com:55501/cmtaxprojects?useUnicode=yes&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 db.cmtaxprojects.username=srao
 security.enabled=true
 security.general.cors.allowCredentials=false
